--- a/app/src/main/res/layout/activity_q_q_group.xml
+++ b/app/src/main/res/layout/activity_q_q_group.xml
@@ -47,7 +47,31 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|center"
                     android:layout_margin="12dp"
-                    android:text="桂电课程表交流群"
+                    android:text="@string/text_guet_class_table"
+                    android:textColor="#AA000000"
+                    android:textSize="18sp" />
+
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/xui_config_color_gray_9" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="guetClassTable2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center"
+                    android:layout_margin="12dp"
+                    android:text="@string/text_guet_class_table2"
                     android:textColor="#AA000000"
                     android:textSize="18sp" />
 
