--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,6 +3,7 @@
     <string-array name="spinnerterm">
         <item>第一学期</item>
         <item>第二学期</item>
+        <item>小学期</item>
     </string-array>
     <string-array name="loginType">
         <item>智慧校园</item>
