--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,49 +24,30 @@
             android:id="@+id/title"
             style="@style/TextStyle.Title"
             android:layout_width="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_margin="15dp"
             android:text="@string/app_name"
             android:textSize="35sp"
-            android:layout_centerHorizontal="true"
             android:textStyle="bold"
             tools:ignore="RelativeOverlap" />
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="13dp"
-            android:src="@drawable/p_bangzhu"
-            android:onClick="showHelp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="13dp"
+            android:onClick="showHelp"
+            android:src="@drawable/p_bangzhu"
             tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.xuexiang.xui.widget.tabbar.TabControlView
-            android:id="@+id/TabControl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            app:tcv_defaultSelection="0"
-            app:tcv_items="@array/loginType"
-            app:tcv_selectedColor="@color/xui_btn_green_normal_color"
-            app:tcv_strokeWidth="2dp"
-            app:tcv_textSize="21sp"
-            app:tcv_unselectedTextColor="@color/xui_btn_green_normal_color" />
-
-    </LinearLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="18dp">
+        android:layout_marginTop="60dp">
 
         <ImageView
             android:layout_width="39dp"
@@ -92,49 +73,6 @@
             android:maxLines="1"
             android:textColorHint="@color/xui_config_color_50_pure_black"
             android:textSize="20sp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/bkjwPassword"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp">
-
-        <ImageView
-            android:layout_width="39dp"
-            android:layout_height="27dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="13dp"
-            android:src="@drawable/password"
-            tools:ignore="ContentDescription" />
-
-        <EditText
-            android:id="@+id/et_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="56dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginBottom="4dp"
-            android:hint="@string/hint_BKJW_password"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:textColorHint="@color/xui_config_color_50_pure_black"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/iv_pwd_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="17dp"
-            android:src="@drawable/ic_baseline_visibility_off_24"
-            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
@@ -203,6 +141,7 @@
         style="@style/SuperButton.Primary.Login"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="6dp"
+        android:textSize="25sp"
         android:text="@string/login" />
 
     <ProgressBar
@@ -212,23 +151,51 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-    <com.xuexiang.xui.widget.button.ButtonView
-        style="@style/ButtonView.Blue"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp">
 
-        android:onClick="changePwd"
-        android:text="@string/find_password"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.xuexiang.xui.widget.button.ButtonView
+                android:id="@+id/buttonView2"
+                style="@style/ButtonView.Green"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+
+                android:layout_gravity="center"
+                android:onClick="activateAccount"
+                android:text="@string/activate_account"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+
+            <com.xuexiang.xui.widget.button.ButtonView
+                android:layout_marginStart="30dp"
+                android:id="@+id/buttonView"
+                style="@style/ButtonView.Blue"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+
+                android:layout_gravity="center"
+                android:onClick="changePwd"
+                android:text="@string/find_password"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         tools:ignore="UselessParent">
